# ttcl

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.am.inc  NEWS  README  README.md  configure.ac
doc/: Doxyfile  Makefile.am  components.dot
doc/manual/: Makefile.am
ext/: Makefile.am
ext/tap++/: Makefile.am
ext/tap++/doc/: Makefile.am
ext/tap++/headers/: Makefile.am
ext/tap++/headers/tap++/: tap++.h
ext/tap++/source/: Makefile.am
include/: Makefile.am
include/ttcl/: .gitignore  assert.hxx  c++0x.hxx  c++11.hxx  exception.hxx  forward.hxx  global.hxx  options.hxx  sys_exception.hxx  types.hxx
include/ttcl/cl/: adaptable_data_model.hxx  adaptable_data_modeler.hxx  adaptable_data_umodeler.hxx  data_clusterer.hxx  data_model.hxx  data_modeler.hxx  data_scorer.hxx  data_uclusterer.hxx  data_umodeler.hxx  dendrogram.hxx  distance_clusterer.hxx  hard_clustering.hxx  hard_data_clusterer.hxx  hard_data_model.hxx  hard_data_modeler.hxx  hard_data_uclusterer.hxx  hard_data_umodeler.hxx  hard_distance_matrix_clusterer.hxx  hard_matrix_clusterer.hxx  hard_matrix_uclusterer.hxx  hier_data_clusterer.hxx  hier_distance_matrix_clusterer.hxx  hier_matrix_clusterer.hxx  matrix_clusterer.hxx  matrix_uclusterer.hxx  options.hxx  soft_clustering.hxx  soft_data_clusterer.hxx  soft_data_model.hxx  soft_data_modeler.hxx  soft_data_uclusterer.hxx  soft_data_umodeler.hxx  soft_distance_matrix_clusterer.hxx  soft_matrix_clusterer.hxx  soft_matrix_uclusterer.hxx
include/ttcl/cl/wr/: data_clusterer_w.hxx  data_model_w.hxx  data_modeler_w.hxx  data_uclusterer_w.hxx  data_umodeler_w.hxx  hier_data_clusterer_w.hxx  hier_matrix_clusterer_w.hxx  matrix_clusterer_w.hxx  matrix_uclusterer_w.hxx
include/ttcl/co/: _boost_matrix.hxx  _dense_forwarder.hxx  _matrix_forwarder.hxx  _sparse_forwarder.hxx  _square_matrix.hxx  _square_matrix_iterator.hxx  _square_matrix_reverse_iterator.hxx  _square_matrix_row_iterator.hxx  _square_matrix_row_ref.hxx  binary_matrix.hxx  boost_matrix.hxx  cube.hxx  default_pair.hxx  fake_pair.hxx  fortran_matrix.hxx  full_symmetric_matrix.hxx  hollow_symmetric_matrix.hxx  matrix.hxx  sparse_matrix.hxx  traits.hxx  vecvec_matrix.hxx
include/ttcl/co/wr/: matrix_wrap.hxx
include/ttcl/dt/: matrix_data.hxx  traits.hxx
include/ttcl/dt/wr/: data_w.hxx  feature_data_w.hxx  matrix_w.hxx
include/ttcl/fn/: cross_apply.hxx  gaussian_kernel.hxx  kernel_distance.hxx  linear_kernel.hxx  squared_euclidean_distance.hxx  squared_mahalanobis_distance.hxx  traits.hxx
include/ttcl/io/: _binstream.hxx  _bzstream.hxx  _gzstream.hxx  ianystream.hxx  ibinstream.hxx  ibzstream.hxx  igzstream.hxx  oanystream.hxx  obinstream.hxx  obzstream.hxx  ogzstream.hxx
include/ttcl/mf/: coalesce.hxx  has_field.hxx  has_type.hxx  maximum_common_type.hxx  metaclass_of.hxx  traits.hxx  voidify.hxx
include/ttcl/tu/: choices.hxx  tuning.hxx
include/ttcl/ut/: c_escape.hxx  demangle.hxx  indexed_compare.hxx  math.hxx  range.hxx  reentrant_random.hxx  singleton.hxx  std_clock.hxx  std_random.hxx
include/ttcl/wr/: interface_wrap.hxx  shared_ptr.hxx  shared_referee.hxx  typed_shared_referee.hxx
include/ttcl_mulisp/run/: interpreter.hxx  lisp_interpreter.hxx
include/ttcl_mulisp/sexp/: sexp.hxx  sexp_atom.hxx  sexp_bool.hxx  sexp_const_visitor.hxx  sexp_integer.hxx  sexp_native.hxx  sexp_null.hxx  sexp_number.hxx  sexp_pair.hxx  sexp_parser.hxx  sexp_procedure.hxx  sexp_real.hxx  sexp_string.hxx  sexp_symbol.hxx  sexp_visitor.hxx
m4/: ax_cxx_cxx_11_features.m4  doxygen.m4
src/: Makefile.am
src/ttcl/: .gitignore  Makefile.am  boost_assert.cxx  exception.cxx  sys_exception.cxx
src/ttcl/cl/: Makefile.am  options.cxx
src/ttcl/io/: Makefile.am  _bzstream.cxx  _gzstream.cxx  ianystream.cxx  ibinstream.cxx  ibzstream.cxx  igzstream.cxx  oanystream.cxx  obinstream.cxx  obzstream.cxx  ogzstream.cxx
src/ttcl/tu/: Makefile.am  tuning.cxx
src/ttcl/ut/: Makefile.am  c_escape.cxx  demangle.cxx  reentrant_random.cxx  std_clock.cxx  std_random.cxx
src/ttcl/wr/: Makefile.am  shared_referee.cxx
src/ttcl_mulisp/: .gitignore  Makefile.am  main.cxx
src/ttcl_mulisp/run/: Makefile.am  bool_procedures.cxx  control_procedures.cxx  display_procedures.cxx  eval_procedures.cxx  gpl_procedures.cxx  interpreter.cxx  lisp_interpreter.cxx  number_arithmetic_procedures.cxx  number_compare_procedures.cxx  pair_procedures.cxx  procedures.hxx  quote_procedures.cxx  set_procedures.cxx  string_compare_procedures.cxx  string_operation_procedures.cxx
src/ttcl_mulisp/sexp/: Makefile.am  sexp.cxx  sexp_atom.cxx  sexp_bool.cxx  sexp_const_visitor.cxx  sexp_integer.cxx  sexp_native.cxx  sexp_null.cxx  sexp_number.cxx  sexp_pair.cxx  sexp_parser.cxx  sexp_procedure.cxx  sexp_real.cxx  sexp_string.cxx  sexp_symbol.cxx  sexp_visitor.cxx
tests/: .gitignore  Makefile.am  tap-driver.sh  test_co_wr_matrix_wrap.cxx  test_wr_interface_wrap.cxx
tests/unit/ttcl/: Makefile.am
tests/unit/ttcl/cl/: Makefile.am  dummy_data.hxx  test_hard_data_clusterer.cxx  test_soft_data_clusterer.cxx
tests/unit/ttcl/co/: Makefile.am  test_fortran_matrix.cxx  test_full_symmetric_matrix.cxx  test_hollow_symmetric_matrix.cxx  test_matrix.cxx  test_vecvec_matrix.cxx
tests/unit/ttcl/dt/: Makefile.am
tests/unit/ttcl/dt/wr/: Makefile.am  test_feature_data_w.cxx  test_matrix_w.cxx
tests/unit/ttcl/fn/: Makefile.am  test_cross_apply.cxx
tests/unit/ttcl/mf/: Makefile.am  test_coalesce.cxx  test_maximum_common_type.cxx  test_metaclass_of.cxx
tests/unit/ttcl/tu/: Makefile.am  test_choices.cxx
tests/unit/ttcl/wr/: Makefile.am  test_interface_wrap.cxx
tools/: expand-sources  remove-backups
