# TTCL: The Template Clustering Library
# Copyright (C) 2012  Edgar Gonzàlez i Pellicer
#
# This file is part of TTCL.
#
# TTCL is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.

nobase_include_HEADERS = \
	ttcl/assert.hxx ttcl/c++0x.hxx ttcl/exception.hxx \
	ttcl/global.hxx ttcl/options.hxx ttcl/sys_exception.hxx \
	ttcl/types.hxx \
	\
	ttcl/tu/choices.hxx ttcl/tu/tuning.hxx

# Local Variables:
# coding: utf-8
# End:
