# TTCL: The Template Clustering Library
# Copyright (C) 2012  Edgar Gonzàlez i Pellicer
#
# This file is part of TTCL.
#
# TTCL is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.

nobase_include_HEADERS = \
	ttcl/assert.hxx ttcl/c++0x.hxx ttcl/exception.hxx \
	ttcl/global.hxx ttcl/options.hxx ttcl/sys_exception.hxx \
	ttcl/types.hxx \
	\
	ttcl/co/_boost_matrix.hxx ttcl/co/_square_matrix.hxx \
	ttcl/co/_square_matrix_iterator.hxx \
	ttcl/co/_square_matrix_reverse_iterator.hxx \
	ttcl/co/_square_matrix_row_iterator.hxx \
	ttcl/co/_square_matrix_row_ref.hxx ttcl/co/cube.hxx \
	ttcl/co/default_pair.hxx ttcl/co/fake_pair.hxx \
	ttcl/co/fortran_matrix.hxx ttcl/co/full_symmetric_matrix.hxx \
	ttcl/co/hollow_symmetric_matrix.hxx ttcl/co/matrix.hxx \
	\
	ttcl/dt/wr/data_w.hxx ttcl/dt/wr/matrix_w.hxx
	\
	ttcl/mf/coalesce.hxx ttcl/mf/has_field.hxx ttcl/mf/has_type.hxx \
	ttcl/mf/maximum_common_type.hxx ttcl/mf/metaclass_of.hxx \
	ttcl/mf/traits.hxx ttcl/mf/voidify.hxx
	\
	ttcl/ut/c_escape.hxx ttcl/ut/demangle.hxx ttcl/ut/indexed_compare.hxx \
	ttcl/ut/math.hxx ttcl/ut/range.hxx ttcl/ut/reentrant_random.hxx \
	ttcl/ut/singleton.hxx ttcl/ut/std_clock.hxx ttcl/ut/std_random.hxx \
	\
	ttcl/tu/choices.hxx ttcl/tu/tuning.hxx
	\
	ttcl_mulisp/run/interpreter.hxx ttcl_mulisp/run/lisp_interpreter.hxx \
	\
	ttcl_mulisp/sexp/sexp.hxx ttcl_mulisp/sexp/sexp_atom.hxx \
	ttcl_mulisp/sexp/sexp_bool.hxx ttcl_mulisp/sexp/sexp_const_visitor.hxx \
	ttcl_mulisp/sexp/sexp_integer.hxx ttcl_mulisp/sexp/sexp_native.hxx \
	ttcl_mulisp/sexp/sexp_null.hxx ttcl_mulisp/sexp/sexp_number.hxx \
	ttcl_mulisp/sexp/sexp_pair.hxx ttcl_mulisp/sexp/sexp_parser.hxx \
	ttcl_mulisp/sexp/sexp_procedure.hxx ttcl_mulisp/sexp/sexp_real.hxx \
	ttcl_mulisp/sexp/sexp_string.hxx ttcl_mulisp/sexp/sexp_symbol.hxx \
	ttcl_mulisp/sexp/sexp_visitor.hxx

# Local Variables:
# coding: utf-8
# End:
