# TTCL: The Template Clustering Library
# Copyright (C) 2012  Edgar Gonzàlez i Pellicer
#
# This file is part of TTCL.
#
# TTCL is free software: you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.

include ../../../Makefile.am.inc

INCLUDES = -I../../../include

noinst_LTLIBRARIES = libttcl_mulisp_sexp.la

libttcl_mulisp_sexp_la_SOURCES = \
	sexp.cxx sexp_atom.cxx sexp_bool.cxx sexp_const_visitor.cxx \
	sexp_integer.cxx sexp_native.cxx sexp_null.cxx sexp_number.cxx \
	sexp_pair.cxx sexp_parser.cxx sexp_procedure.cxx sexp_real.cxx \
	sexp_string.cxx sexp_symbol.cxx sexp_visitor.cxx

# Local Variables:
# coding: utf-8
# End:
